syntax = "proto3";

package auth;

option go_package = "/gen/go/auth;authv1";

service AuthService {
    rpc RegisterUser (RegisterRequest) returns (AuthResponse);
    rpc LoginUser (LoginRequest) returns (AuthResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
    rpc RevokeToken (RevokeTokenRequest) returns (RevokeTokenResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RevokeTokenRequest {
  string refresh_token = 1;      
}

message RevokeTokenResponse {
  bool ok = 1;
}

message AuthResponse {
    string user_id = 1;
    string access_token = 2;
    string refresh_token = 3;
    int64  access_expires_at = 4; // Unix timestamp (UTC)
}

message ValidateTokenRequest {
    string access_token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string user_id = 2;
    string email = 3;
}